--- a/OnlineTaxi.Core/OnlineTaxi.Core.csproj
+++ b/OnlineTaxi.Core/OnlineTaxi.Core.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="3.2.0" />
+  </ItemGroup>
+
 </Project>
