--- a/OnlineTaxi.Core/OnlineTaxi.Core.csproj
+++ b/OnlineTaxi.Core/OnlineTaxi.Core.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="MailKit" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Database.Domain\Database.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
